--- a/src/Examples/Mindbite.Mox.DesignDemoApp/Mindbite.Mox.DesignDemoApp.csproj
+++ b/src/Examples/Mindbite.Mox.DesignDemoApp/Mindbite.Mox.DesignDemoApp.csproj
@@ -12,6 +12,11 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.3.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
