--- a/src/Examples/Mindbite.Mox.NotificationCenter/Mindbite.Mox.NotificationCenter.csproj
+++ b/src/Examples/Mindbite.Mox.NotificationCenter/Mindbite.Mox.NotificationCenter.csproj
@@ -16,6 +16,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.3.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+  
+  <ItemGroup>
     <EmbeddedResource Include="wwwroot\**" />
   </ItemGroup>
 </Project>
