--- a/src/Mindbite.Mox.Core/Mindbite.Mox.Core.csproj
+++ b/src/Mindbite.Mox.Core/Mindbite.Mox.Core.csproj
@@ -7,10 +7,10 @@
     <TargetFramework>net6.0</TargetFramework>
     <OutputTypeEx>library</OutputTypeEx>
     <IsPackable>true</IsPackable>
-    <Version>6.0.10</Version>
+    <Version>6.1.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <FileVersion>6.0.10.0</FileVersion>
-    <AssemblyVersion>6.0.10.0</AssemblyVersion>
+    <FileVersion>6.1.0.0</FileVersion>
+    <AssemblyVersion>6.1.0.0</AssemblyVersion>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <Copyright>Mindbite AB</Copyright>
     <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
@@ -18,10 +18,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.9" />
 
-    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.1.0">
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.3.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -33,6 +33,7 @@
     </Content>
     <Content Remove="tsconfig.json" />
     <Content Remove="wwwroot\mox\static\svg\arrow-down.svg" />
+    <Content Remove="wwwroot\mox\static\svg\download.svg" />
     <Content Remove="wwwroot\mox\static\svg\pointing-arrow-down.svg" />
     <Content Remove="wwwroot\mox\static\svg\pointing-arrow-left.svg" />
     <Content Remove="wwwroot\mox\static\svg\pointing-arrow-right.svg" />
