--- a/src/Mindbite.Mox.HtmlTable/Mindbite.Mox.HtmlTable.csproj
+++ b/src/Mindbite.Mox.HtmlTable/Mindbite.Mox.HtmlTable.csproj
@@ -40,4 +40,12 @@
 	<ItemGroup>
 	  <EmbeddedResource Remove="wwwroot\mox\static\htmltable\js\tsconfig.json" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="Readme.md" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Readme.md" />
+	</ItemGroup>
 </Project>
