--- a/src/Mindbite.Mox.DirectoryListing/Mindbite.Mox.DirectoryListing.csproj
+++ b/src/Mindbite.Mox.DirectoryListing/Mindbite.Mox.DirectoryListing.csproj
@@ -8,9 +8,9 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<IsPackable>true</IsPackable>
 		<OutputTypeEx>library</OutputTypeEx>
-		<Version>6.1.10</Version>
-		<AssemblyVersion>6.1.10.0</AssemblyVersion>
-		<FileVersion>6.1.10.0</FileVersion>
+		<Version>6.1.13</Version>
+		<AssemblyVersion>6.1.13.0</AssemblyVersion>
+		<FileVersion>6.1.13.0</FileVersion>
 		<TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<IsPackable>true</IsPackable>
@@ -43,5 +43,23 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Resources\Localization.Designer.cs">
+	    <DependentUpon>Localization.resx</DependentUpon>
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Resources\Localization.en.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	  </EmbeddedResource>
+	  <EmbeddedResource Update="Resources\Localization.resx">
+	    <LastGenOutput>Localization.Designer.cs</LastGenOutput>
+	    <Generator>ResXFileCodeGenerator</Generator>
+	  </EmbeddedResource>
 	</ItemGroup>
 </Project>
